# PointNeXt

./: .gitignore  .gitmodules  404.html  LICENSE  MANIFEST.in  README.md  index.html  install.rst  install.sh  main_classification.sh  main_segmentation.sh  mkdocs.yml  pyproject.toml  requirements.txt  update.sh
.github/workflows/: main.yml
cfgs/: default.yaml
cfgs/modelnet40ply2048/: README.md  assanet-l.yaml  default.yaml  pix4point.yaml  pointnext-s.yaml  pointvector-s.yaml
cfgs/s3dis/: README.md  assanet-l.yaml  assanet.yaml  default.yaml  dgcnn.yaml  pointnet++.yaml  pointnet++msg.yaml  pointnet.yaml  pointnext-b.yaml  pointnext-l.yaml  pointnext-s.yaml  pointnext-xl.yaml  pointvector-l.yaml  pointvector-xl.yaml
cfgs/s3dis_pix4point/: pix4point.yaml  pix4pointInv.yaml  pix4point_bert.yaml  pix4point_freeze.yaml
cfgs/s3dis_sphere_pix4point/: README.md  default.yaml  pix4point.yaml
cfgs/scannet/: ASSANet.yaml  README.md  pointnet++_original.yaml  pointnext-b.yaml  pointnext-l.yaml  pointnext-s.yaml  pointnext-xl.yaml
cfgs/scanobjectnn/: README.md  default.yaml  dgcnn.yaml  pointmlp.yaml  pointnet++.yaml  pvit.yaml  (+3 more)
changes/: index.html
checkpoints/: index.html
docs/: changes.md  checkpoints.md  faq.md  free_gpu_colab.md  index.md  modelzoo.md  release.md
examples/: profile.py
faq/: index.html
free_gpu_colab/: index.html
metadata/: README.md
modelzoo/: index.html
notebooks/: colab_free_modelnet40_smoke_eval.ipynb
pointnext_official/: __init__.py  checkpoints.py  cli.py
pointnext_torch/: checkpoints.py  cli.py
release/: index.html
script/: main_classification.sh  main_partseg.sh  main_segmentation.sh  profile_flops.sh  test_all_in_one.sh
search/: search_index.json
tests/: test_pointnext_official_package.py
tools/: download_checkpoint.py  write_checkpoint_manifest.py
(+44 files in other folders)
